zone fixed final tab&chat fixed final upgrades redone for new zones