@@ -24,14 +24,12 @@ import java.util.*;
 
 public class Unity implements CommandExecutor {
 
-    private final UnityLauncher unityLauncher = JavaPlugin.getPlugin(UnityLauncher.class);
+    private final UnityLauncher plugin = JavaPlugin.getPlugin(UnityLauncher.class);
 
     private final HelpCommandManager helpManager;
     private final WebSocketManager webSocketManager;
     private final ActivityTracker tracker;
     private final ZoneManager zoneManager;
-
-    private DiplomacyService diplomacy;
 
     public Unity(HelpCommandManager helpManager,
                  WebSocketManager webSocketManager,
@@ -49,85 +47,97 @@ public class Unity implements CommandExecutor {
                              @NotNull String label,
                              @NotNull String[] args) {
 
-        diplomacy = UnityLauncher.getInstance().diplomacy;
-
+        // только игрок
         if (!(sender instanceof Player p)) {
             sender.sendMessage(ChatColor.RED + "Эта команда доступна только игрокам.");
             return true;
         }
 
-        // 0 аргументов — показать категории кликабельно
+        // 0 аргументов — показать категории
         if (args.length == 0) {
             sender.sendMessage(ChatColor.YELLOW + "Выбери категорию команды:\n");
-            for (String s : unityLauncher.commandCategories) {
-                Component clickableCategory = Component.text("[> " + s)
+            for (String cat : plugin.commandCategories) {
+                Component clickableCategory = Component.text("[> " + cat)
                         .color(NamedTextColor.GRAY)
-                        .clickEvent(ClickEvent.runCommand("/ul help " + s))
+                        .clickEvent(ClickEvent.runCommand("/ul help " + cat))
                         .hoverEvent(HoverEvent.showText(Component.text("Нажми, чтобы показать команды категории")));
                 p.sendMessage(clickableCategory);
             }
             return true;
         }
 
-        // Делегирование зоновых подкоманд: /ul zone ...
+        // подпакет зон: /ul zone ...
         if (args.length >= 2 && args[0].equalsIgnoreCase("zone")) {
             String[] zoneArgs = Arrays.copyOfRange(args, 1, args.length);
-            UnityLauncher plugin = JavaPlugin.getPlugin(UnityLauncher.class);
-            plugin.getZoneManager().handleCommand(p, zoneArgs);
+            zoneManager.handleCommand(p, zoneArgs);
             return true;
         }
 
-        // ===== /ul relations .... =====
+        // ===== /ul relations ... =====
         if (args[0].equalsIgnoreCase("relations")) {
             if (args.length == 1) {
                 sender.sendMessage(ChatColor.YELLOW + "/ul relations get \"<ДругаяСтрана>\"");
                 sender.sendMessage(ChatColor.YELLOW + "/ul relations set \"<ДругаяСтрана>\" <HOSTILE|NEUTRAL|FRIENDLY>");
                 return true;
             }
+
             String sub = args[1].toLowerCase(Locale.ROOT);
 
             ParsedArg parsed = parseQuotedArg(args);
-            if (parsed.value == null) {
+            String otherCountry = parsed.value;
+            if (otherCountry == null || otherCountry.isBlank()) {
                 sender.sendMessage(ChatColor.RED + "Укажи страну. " + ChatColor.GRAY +
                         "Если название содержит пробел, используй кавычки. Пример: \"Моя Страна\"");
                 return true;
             }
-            String otherCountry = parsed.value;
 
-            // Используем кэширующий CountryRegistryJdbc: async по нику игрока
-            UnityLauncher.getInstance().countryRegistryJdbc.getCountryByPlayerNameAsync(p.getName(), myCountry -> {
-                if (myCountry == null || myCountry.trim().isEmpty()) {
-                    sender.sendMessage(ChatColor.RED + "Ты не состоишь ни в одном государстве.");
-                    return;
+            // синхронное получение своей страны
+            String myCountry = plugin.countryRegistryJdbc.getCountryOfPlayer(p.getName());
+            if (myCountry == null || myCountry.isBlank()) {
+                sender.sendMessage(ChatColor.RED + "Ты не состоишь ни в одном государстве.");
+                return true;
+            }
+
+            DiplomacyService diplomacy = plugin.diplomacy;
+
+            if (sub.equals("get")) {
+                RelationStatus s = diplomacy.getRelation(myCountry, otherCountry);
+                sender.sendMessage(
+                        ChatColor.GOLD + myCountry + ChatColor.GRAY + " ↔ " +
+                                ChatColor.GOLD + otherCountry + ChatColor.GRAY + " = " +
+                                ChatColor.AQUA + s
+                );
+                return true;
+            }
+
+            if (sub.equals("set")) {
+                // parsed.nextIndex — позиция аргумента после имени страны
+                if (parsed.nextIndex >= args.length) {
+                    sender.sendMessage(ChatColor.RED + "Укажи статус: HOSTILE | NEUTRAL | FRIENDLY");
+                    return true;
                 }
 
-                if (sub.equals("get")) {
-                    RelationStatus s = diplomacy.getRelation(myCountry, otherCountry);
-                    sender.sendMessage(ChatColor.GOLD + myCountry + ChatColor.GRAY + " ↔ " +
-                            ChatColor.GOLD + otherCountry + ChatColor.GRAY + " = " + ChatColor.AQUA + s);
-                    return;
-                }
+                RelationStatus newStatus = RelationStatus.from(args[parsed.nextIndex]);
+                diplomacy.setRelation(myCountry, otherCountry, newStatus);
 
-                if (sub.equals("set")) {
-                    if (parsed.nextIndex >= args.length) {
-                        sender.sendMessage(ChatColor.RED + "Укажи статус: HOSTILE | NEUTRAL | FRIENDLY");
-                        return;
-                    }
-                    RelationStatus s = RelationStatus.from(args[parsed.nextIndex]);
-                    diplomacy.setRelation(myCountry, otherCountry, s);
-                    sender.sendMessage(ChatColor.GREEN + "Установлено: " +
-                            myCountry + " ↔ " + otherCountry + " = " + s);
-                }
-            });
+                sender.sendMessage(ChatColor.GREEN + "Установлено: " +
+                        myCountry + " ↔ " + otherCountry + " = " + newStatus);
+                return true;
+            }
+
+            sender.sendMessage(ChatColor.RED + "Неизвестная подкоманда relations: " + sub);
             return true;
         }
 
         // ===== Остальные команды =====
 
-        // 1 аргумент — короткие команды/подсказки
+        // == 1 аргумент ==
         if (args.length == 1) {
-            switch (args[0].toLowerCase(Locale.ROOT)) {
+            String sub = args[0].toLowerCase(Locale.ROOT);
+
+            switch (sub) {
                 case "expo": {
+                    // рендерим heatmap слой активности чанков
                     ActivityWeights weights = new ActivityWeights();
                     ChunkActivityHeatmapExporter.exportHeatmapToBlueMapLayer(
                             tracker.getChunkStatsMap(),
@@ -136,10 +146,13 @@ public class Unity implements CommandExecutor {
                     );
                     return true;
                 }
+
                 case "fsnap": {
-                    unityLauncher.zoneActivityCalculations.snapshotAndMaybeBillAllZones();
+                    // форсируем биллинг зон прямо сейчас
+                    plugin.zoneActivityCalculations.snapshotAndMaybeBillAllZones();
                     return true;
                 }
+
                 case "blist": {
                     LocalDate today = LocalDate.now(zoneManager.zoneId);
                     p.sendMessage(ChatColor.GOLD + "Биллинг зон (сегодня: " + today + "):");
@@ -159,36 +172,47 @@ public class Unity implements CommandExecutor {
                             });
                     return true;
                 }
+
                 case "rcode":
                     UnityCommands.getInstance().rCode(sender);
                     return true;
+
                 case "balance":
-                case "bal":
+                case "bal": {
                     double balance = UnityCommands.getInstance().getMoney(sender);
                     sender.sendMessage("Ваш баланс: " + ChatColor.GREEN + balance + ChatColor.RESET + "!");
                     return true;
+                }
+
                 case "country":
                     UnityCommands.getInstance().getCountry(sender);
                     return true;
+
                 case "top":
                     sender.sendMessage("Введи категорию " + ChatColor.GREEN + "<balance/playtime/events>" + ChatColor.RESET + "!");
                     return true;
+
                 case "change":
                     sender.sendMessage("Введи старый, а затем желаемый пароль!");
                     return true;
+
                 case "notifications":
                     UnityCommands.getInstance().getNotifications(sender);
                     return true;
+
                 case "pay":
                     sender.sendMessage("Введи ник игрока и сумму, которую вы хотите перечислить.");
                     return true;
+
                 case "countrybalance":
                 case "cb":
                     sender.sendMessage("Введи действие и сумму денег.");
                     return true;
+
                 case "daydeal":
                     sender.sendMessage("Введи код.");
                     return true;
+
                 case "group":
                     sender.sendMessage("Введи категорию " + ChatColor.GREEN + "<list/set/prefix>" + ChatColor.RESET + "!");
                     return true;
@@ -196,70 +220,86 @@ public class Unity implements CommandExecutor {
             return true;
         }
 
-        // 2 аргумента
+        // == 2 аргумента ==
         if (args.length == 2) {
-            switch (args[0].toLowerCase(Locale.ROOT)) {
+            String sub0 = args[0].toLowerCase(Locale.ROOT);
+
+            switch (sub0) {
+
                 case "help": {
                     String category = args[1];
-                    if (!category.isEmpty()) {
-                        if (unityLauncher.commandCategories.contains(category)) {
-                            sender.sendMessage(ChatColor.YELLOW + "Команды в категории \"" + category + "\":");
-                            List<HelpCommandManager.HelpCommand> categoryCommands =
-                                    helpManager.getCommandsByCategory(category);
-                            for (HelpCommandManager.HelpCommand cmd : categoryCommands) {
-                                p.sendMessage(cmd.toComponent());
-                            }
-                        } else {
-                            sender.sendMessage(ChatColor.RED + "Категория \"" + category + "\" не найдена.");
+                    if (category.isEmpty()) {
+                        sender.sendMessage(ChatColor.RED + "Необходимо указать название категории.");
+                        return true;
+                    }
+
+                    if (plugin.commandCategories.contains(category)) {
+                        sender.sendMessage(ChatColor.YELLOW + "Команды в категории \"" + category + "\":");
+                        List<HelpCommandManager.HelpCommand> categoryCommands =
+                                helpManager.getCommandsByCategory(category);
+                        for (HelpCommandManager.HelpCommand cmd : categoryCommands) {
+                            p.sendMessage(cmd.toComponent());
                         }
                     } else {
-                        sender.sendMessage(ChatColor.RED + "Необходимо указать название категории.");
+                        sender.sendMessage(ChatColor.RED + "Категория \"" + category + "\" не найдена.");
                     }
                     return true;
                 }
+
                 case "change":
                     sender.sendMessage("Введи старый, а затем желаемый пароль!");
                     return true;
 
                 case "fpslink": {
-                    String message = args[1];
+                    String link = args[1];
                     if (webSocketManager != null && webSocketManager.isPlayerConnected(p.getName())) {
-                        webSocketManager.sendMessageToPlayer(p.getName(), message);
+                        webSocketManager.sendMessageToPlayer(p.getName(), link);
                         sender.sendMessage("§7Ссылка открыта в приложении.");
                     } else {
                         sender.sendMessage("§cОшибка: приложение не подключено.");
-                        if (webSocketManager != null) webSocketManager.tryForceConnect(p);
+                        if (webSocketManager != null) {
+                            webSocketManager.tryForceConnect(p);
+                        }
                     }
                     return true;
                 }
 
                 case "top": {
-                    String s = args[1].substring(0, 1).toUpperCase() + args[1].substring(1).toLowerCase();
-                    if (s.equals("Playtime") || s.equals("Balance") || s.equals("Events"))
-                        UnityCommands.getInstance().getTop(sender, s);
+                    // нормализуем регистр первой буквы
+                    String cat = args[1].substring(0, 1).toUpperCase(Locale.ROOT)
+                            + args[1].substring(1).toLowerCase(Locale.ROOT);
+                    if (cat.equals("Playtime") || cat.equals("Balance") || cat.equals("Events")) {
+                        UnityCommands.getInstance().getTop(sender, cat);
+                    } else {
+                        sender.sendMessage("Введи категорию " + ChatColor.GREEN + "<balance/playtime/events>" + ChatColor.RESET + "!");
+                    }
                     return true;
                 }
 
                 case "notifications":
-                    if (args[1].equalsIgnoreCase("on") || args[1].equalsIgnoreCase("off"))
+                    if (args[1].equalsIgnoreCase("on") || args[1].equalsIgnoreCase("off")) {
                         UnityCommands.getInstance().toggleNotifications(sender, args[1]);
+                    } else {
+                        sender.sendMessage("Используй /ul notifications ON или /ul notifications OFF");
+                    }
                     return true;
 
                 case "pay":
-                    sender.sendMessage("Введи ник игрока и сумму, которую вы хочешь перечислить.");
+                    sender.sendMessage("Введи ник игрока и сумму, которую ты хочешь перечислить.");
                     return true;
 
                 case "countrybalance":
                 case "cb":
-                    sender.sendMessage("Введи действие и сумму, которую вы хочешь перечислить.");
+                    sender.sendMessage("Введи действие и сумму, которую ты хочешь перечислить.");
                     return true;
 
                 case "daydeal":
                     UnityCommands.getInstance().dayDeal(sender, args[1]);
                     return true;
 
-                case "group":
-                    switch (args[1].toLowerCase(Locale.ROOT)) {
+                case "group": {
+                    String sub1 = args[1].toLowerCase(Locale.ROOT);
+                    switch (sub1) {
                         case "list":
                             UnityCommands.getInstance().getGroups(sender);
                             break;
@@ -274,12 +314,16 @@ public class Unity implements CommandExecutor {
                             break;
                     }
                     return true;
+                }
             }
         }
 
-        // 3 аргумента
+        // == 3 аргумента ==
         if (args.length == 3) {
-            switch (args[0].toLowerCase(Locale.ROOT)) {
+            String sub0 = args[0].toLowerCase(Locale.ROOT);
+
+            switch (sub0) {
+
                 case "change":
                     UnityCommands.getInstance().changePass(sender, args[1], args[2]);
                     return true;
@@ -298,7 +342,10 @@ public class Unity implements CommandExecutor {
                     try {
                         if (args[1].equalsIgnoreCase("add") || args[1].equalsIgnoreCase("withdraw")) {
                             double sendMoney = Double.parseDouble(args[2]);
-                            UnityCommands.getInstance().CountryMoney(sender, args[1].equalsIgnoreCase("add"), sendMoney);
+                            UnityCommands.getInstance()
+                                    .CountryMoney(sender,
+                                            args[1].equalsIgnoreCase("add"),
+                                            sendMoney);
                         } else {
                             sender.sendMessage("Введите действие и сумму денег.");
                         }
@@ -307,8 +354,9 @@ public class Unity implements CommandExecutor {
                     }
                     return true;
 
-                case "group":
-                    switch (args[1].toLowerCase(Locale.ROOT)) {
+                case "group": {
+                    String sub1 = args[1].toLowerCase(Locale.ROOT);
+                    switch (sub1) {
                         case "set":
                             sender.sendMessage("Введи ник игрока и группу, в которую хотите его поместить (только для владельцев стран)");
                             break;
@@ -320,12 +368,14 @@ public class Unity implements CommandExecutor {
                             break;
                     }
                     return true;
+                }
             }
         }
 
-        // 4 аргумента — группы
+        // == 4 аргумента ==  (/ul group set <ник> <группа>) или (/ul group prefix <группа> <префикс>)
         if (args.length == 4 && args[0].equalsIgnoreCase("group")) {
-            switch (args[1].toLowerCase(Locale.ROOT)) {
+            String sub1 = args[1].toLowerCase(Locale.ROOT);
+            switch (sub1) {
                 case "set":
                     UnityCommands.getInstance().setGroup(sender, args[2], args[3]);
                     break;
@@ -339,40 +389,46 @@ public class Unity implements CommandExecutor {
             return true;
         }
 
+        // дальше аргументов больше — пока не документировано
         return true;
     }
 
-    /* ===================== Вспомогательный парсер кавычек ===================== */
+    /* ===================== кавычкованный парсер страны для /ul relations ===================== */
+
+    // просто структурка: значение и индекс аргумента после него
+    private record ParsedArg(String value, int nextIndex) {}
 
     /**
-     * @param value     распарсенное значение
-     * @param nextIndex индекс следующего аргумента после распарсенного блока
-     */
-    private record ParsedArg(String value, int nextIndex) {
-    }
-
-    /**
-     * Парсит один аргумент начиная с позиции fromIdx, поддерживая кавычки.
+     * Парсит один аргумент, начиная с args[2]:
+     *
      * Примеры:
-     *  args = [rel, set, "New Republic", FRIENDLY] -> value="New Republic", nextIndex=4
-     *  args = [rel, get, Spain] -> value="Spain", nextIndex=3
+     *   /ul relations get Spain
+     *   -> value="Spain", nextIndex=3
+     *
+     *   /ul relations set "New Republic" FRIENDLY
+     *   -> value="New Republic", nextIndex=4
      */
     private static ParsedArg parseQuotedArg(String[] args) {
-        if (2 >= args.length) return new ParsedArg(null, 2);
+        if (args.length <= 2) {
+            return new ParsedArg(null, 2);
+        }
+
         String first = args[2];
+
+        // случай: "Country Name"
         if (first.startsWith("\"")) {
             StringBuilder sb = new StringBuilder();
             boolean closed = false;
 
-            // один аргумент с обеими кавычками
+            // кавычки в одном аргументе: "USA"
             if (first.endsWith("\"") && first.length() > 1) {
                 sb.append(first, 1, first.length() - 1);
-                return new ParsedArg(sb.toString(), 2 + 1);
+                return new ParsedArg(sb.toString(), 3);
             }
 
-            // собираем до закрывающей кавычки
+            // иначе собираем до закрывающей кавычки
             sb.append(first.substring(1));
-            int i = 2 + 1;
+            int i = 3;
             while (i < args.length) {
                 String cur = args[i];
                 if (cur.endsWith("\"")) {
@@ -387,10 +443,15 @@ public class Unity implements CommandExecutor {
                     i++;
                 }
             }
-            if (!closed) return new ParsedArg(null, args.length);
+
+            if (!closed) {
+                // не нашли закрывающую кавычку; считаем парс невалидным
+                return new ParsedArg(null, args.length);
+            }
             return new ParsedArg(sb.toString(), i);
-        } else {
-            return new ParsedArg(first, 2 + 1);
         }
+
+        // без кавычек: просто один аргумент
+        return new ParsedArg(first, 3);
     }
 }
